# dbee

./: Cargo.toml
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/domains/: Cargo.toml
crates/domains/src/: lib.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/interpreter/: types.rs
crates/infrastructure/src/interpreter/types/: binary_expression.rs  comparison_expression.rs  delete_expression.rs  get_expression.rs  identifier.rs  keywords.rs  literal.rs  logical_expression.rs  mod.rs  nested_identifier.rs  not_expression.rs  operator.rs  regex.rs  set_expression.rs  update_expression.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: main.rs
